Rename package, use generated POM

--- a/repo/snapshots/com/github/jbrechtel/robospecs/index.html
+++ b/repo/snapshots/com/github/jbrechtel/robospecs/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
   <h1>Repository Contents</h1>
-  <a href='./robospecs/0.1-SNAPSHOT/robospecs-0.1-SNAPSHOT.jar'>./robospecs/0.1-SNAPSHOT/robospecs-0.1-SNAPSHOT.jar</a></br>
-<a href='./robospecs/0.1-SNAPSHOT/robospecs-0.1-SNAPSHOT.pom'>./robospecs/0.1-SNAPSHOT/robospecs-0.1-SNAPSHOT.pom</a></br>
+  <a href='./0.1-SNAPSHOT/robospecs_2.8.1-0.1-SNAPSHOT.jar'>./0.1-SNAPSHOT/robospecs_2.8.1-0.1-SNAPSHOT.jar</a></br>
+<a href='./0.1-SNAPSHOT/robospecs_2.8.1-0.1-SNAPSHOT.pom'>./0.1-SNAPSHOT/robospecs_2.8.1-0.1-SNAPSHOT.pom</a></br>
   </body>
 </html>
