--- a/repo/index.html
+++ b/repo/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
   <h1>Repository Contents</h1>
-  <a href='./snapshots/org/brechtel/robospecs/0.1-SNAPSHOT/robospecs-0.1-SNAPSHOT.jar'>./snapshots/org/brechtel/robospecs/0.1-SNAPSHOT/robospecs-0.1-SNAPSHOT.jar</a></br>
-<a href='./snapshots/org/brechtel/robospecs/0.1-SNAPSHOT/robospecs-0.1-SNAPSHOT.pom'>./snapshots/org/brechtel/robospecs/0.1-SNAPSHOT/robospecs-0.1-SNAPSHOT.pom</a></br>
+  <a href='./snapshots/com/github/jbrechtel/robospecs/0.1-SNAPSHOT/robospecs_2.8.1-0.1-SNAPSHOT.jar'>./snapshots/com/github/jbrechtel/robospecs/0.1-SNAPSHOT/robospecs_2.8.1-0.1-SNAPSHOT.jar</a></br>
+<a href='./snapshots/com/github/jbrechtel/robospecs/0.1-SNAPSHOT/robospecs_2.8.1-0.1-SNAPSHOT.pom'>./snapshots/com/github/jbrechtel/robospecs/0.1-SNAPSHOT/robospecs_2.8.1-0.1-SNAPSHOT.pom</a></br>
   </body>
 </html>
