--- a/repo/snapshots/com/index.html
+++ b/repo/snapshots/com/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
   <h1>Repository Contents</h1>
-  <a href='./github/jbrechtel/robospecs/0.1-SNAPSHOT/robospecs_2.8.1-0.1-SNAPSHOT.jar'>./github/jbrechtel/robospecs/0.1-SNAPSHOT/robospecs_2.8.1-0.1-SNAPSHOT.jar</a></br>
-<a href='./github/jbrechtel/robospecs/0.1-SNAPSHOT/robospecs_2.8.1-0.1-SNAPSHOT.pom'>./github/jbrechtel/robospecs/0.1-SNAPSHOT/robospecs_2.8.1-0.1-SNAPSHOT.pom</a></br>
+  <a href='./github/jbrechtel/robospecs_2.8.1/0.1-SNAPSHOT/robospecs_2.8.1-0.1-SNAPSHOT.jar'>./github/jbrechtel/robospecs_2.8.1/0.1-SNAPSHOT/robospecs_2.8.1-0.1-SNAPSHOT.jar</a></br>
+<a href='./github/jbrechtel/robospecs_2.8.1/0.1-SNAPSHOT/robospecs_2.8.1-0.1-SNAPSHOT.pom'>./github/jbrechtel/robospecs_2.8.1/0.1-SNAPSHOT/robospecs_2.8.1-0.1-SNAPSHOT.pom</a></br>
   </body>
 </html>
