--- a/repo/snapshots/index.html
+++ b/repo/snapshots/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
   <h1>Repository Contents</h1>
-  <a href='./com/github/jbrechtel/robospecs/0.1-SNAPSHOT/robospecs_2.8.1-0.1-SNAPSHOT.jar'>./com/github/jbrechtel/robospecs/0.1-SNAPSHOT/robospecs_2.8.1-0.1-SNAPSHOT.jar</a></br>
-<a href='./com/github/jbrechtel/robospecs/0.1-SNAPSHOT/robospecs_2.8.1-0.1-SNAPSHOT.pom'>./com/github/jbrechtel/robospecs/0.1-SNAPSHOT/robospecs_2.8.1-0.1-SNAPSHOT.pom</a></br>
+  <a href='./com/github/jbrechtel/robospecs_2.8.1/0.1-SNAPSHOT/robospecs_2.8.1-0.1-SNAPSHOT.jar'>./com/github/jbrechtel/robospecs_2.8.1/0.1-SNAPSHOT/robospecs_2.8.1-0.1-SNAPSHOT.jar</a></br>
+<a href='./com/github/jbrechtel/robospecs_2.8.1/0.1-SNAPSHOT/robospecs_2.8.1-0.1-SNAPSHOT.pom'>./com/github/jbrechtel/robospecs_2.8.1/0.1-SNAPSHOT/robospecs_2.8.1-0.1-SNAPSHOT.pom</a></br>
   </body>
 </html>
